--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,35 +1,43 @@
-name: CI/CD Pipeline with Docker Hub
+name: CI/CD Pipeline with Docker & PM2
 
 on:
   push:
     branches:
-      - main  # Jab bhi main branch me push hoga, auto-deploy start hoga
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+    - name: Checkout Repository
+      uses: actions/checkout@v4
 
-      - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker Image
-        run: docker build -t MyDev/demoPro:latest .
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: MyDev
+        password: 12345ser
 
-      - name: Push Docker Image to Docker Hub
-        run: docker push MyDev/demoPro:latest
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: MyDev/demoPro:latest
 
-      - name: Deploy to Server via SSH
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            docker pull MyDev/demoPro:latest
-            docker stop demoPro || true
-            docker rm demoPro || true
-            docker run -d --name demoPro -p 3000:3000 MyDev/demoPro:latest
+    - name: Deploy to EC2 Server
+      uses: appleboy/ssh-action@v1
+      with:
+        host: ${{ secrets.SERVER_IP }}
+        username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.SERVER_SSH_KEY }}
+        script: |
+          docker pull MyDev/demoPro:latest
+          docker stop demoPro || true
+          docker rm demoPro || true
+          docker run -d --name demoPro -p 3000:3000 MyDev/demoPro:latest
+          docker exec demoPro pm2 list
