--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,6 +13,9 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
 
+    - name: Debug Repository Files
+      run: ls -R  # ✅ Check if Dockerfile exists
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
@@ -25,7 +28,8 @@ jobs:
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v5
       with:
-        context: .
+        context: .  # ✅ Ensure correct Dockerfile path
+        file: ./Dockerfile
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/demoproject:latest
 
